# duckworth

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  schema.sql
src/: agent.py  api.py  db.py  ingest.py  main.py  vault.py
tests/: test_ingest.py
ui/: package-lock.json  package.json
ui/src/: App.tsx
ui/src/components/: ChatMessage.tsx  SqlPanel.tsx
